--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,24 @@ body{
     float: right;
     text-align: right;
 }
+
+.form{
+    position: relative;
+    margin: 10px;
+    display: none;
+    width: 50%;
+}
+
+.input{
+    height: 30px;
+    color: white;
+    background-color: #6c757d;
+    border: none;
+    padding: 10px;
+    margin-top: 5px;
+    
+}
+
+input::placeholder { /* Firefox, Chrome, Opera */ 
+    color: white; 
+} 
