--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body{
     font-size: 20px;
     margin: auto;
     padding: 10px;
+    display: none;
 }
 
 .awnsers{
@@ -27,13 +28,14 @@ body{
     flex-direction: column;
     margin: auto;
     padding: 10px;
+    display: none;
 }
+
 
 .awnser{
     padding: 10px;
     margin-top: 10px;
     background-color: #6c757d;
-
 }
 
 .selected{
@@ -50,13 +52,15 @@ body{
     margin: 10px;
     float: right;
     text-align: right;
+    display: none;
 }
 
 .form{
     position: relative;
     margin: 10px;
-    display: none;
-    width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .input{
@@ -66,9 +70,27 @@ body{
     border: none;
     padding: 10px;
     margin-top: 5px;
-    
+    font-size: 20px;
 }
 
 input::placeholder { /* Firefox, Chrome, Opera */ 
     color: white; 
 } 
+
+.role{
+    height: 50px;
+    color: white;
+    background-color: #6c757d;
+    border: none;
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.send{
+    background-color: #28a745;
+    padding: 15px; 
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
