--- a/css/main.css
+++ b/css/main.css
@@ -94,3 +94,28 @@ input::placeholder { /* Firefox, Chrome, Opera */
     text-align: center;
     font-size: 20px;
 }
+
+.option{
+    position: relative;
+    margin: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.sure{
+    background-color: #28a745;
+    padding: 15px; 
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.negative{
+    background-color: #dc3545;
+    padding: 15px; 
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
