--- a/css/main.css
+++ b/css/main.css
@@ -119,3 +119,14 @@ input::placeholder { /* Firefox, Chrome, Opera */
     text-align: center;
     font-size: 20px;
 }
+
+.video {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    margin: 0;
+    top: 0;
+    position: absolute;
+    display: none;
+}
